--- a/AlexNet/AlexNet_Dataset_3.ipynb
+++ b/AlexNet/AlexNet_Dataset_3.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "a3e79247",
-   "metadata": {},
+   "metadata": {
+    "id": "a3e79247"
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -22,9 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "308235d6",
-   "metadata": {},
+   "metadata": {
+    "id": "308235d6"
+   },
    "outputs": [],
    "source": [
     "from numpy.core.fromnumeric import shape\n",
@@ -59,19 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "cae6e61b",
-   "metadata": {},
+   "metadata": {
+    "id": "cae6e61b"
+   },
    "outputs": [],
    "source": [
-    "data_loader_train,data_loader_test=load_data(r\"C:\\Users\\Admin\\Desktop\\COMP 6721\\Project\\datasets\\Dataset3\",32,40)"
+    "data_loader_train,data_loader_test=load_data(r\"C:\\Users\\Admin\\Desktop\\COMP 6721\\Project\\datasets\\Dataset3\",32,64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "d970676b",
-   "metadata": {},
+   "metadata": {
+    "id": "d970676b",
+    "outputId": "884de54c-d96b-4674-9da8-a4ad1636ba2f"
+   },
    "outputs": [
     {
      "data": {
@@ -79,7 +88,7 @@
        "32"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,9 +99,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
+   "id": "FNa7s6OrU8A1",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "FNa7s6OrU8A1",
+    "outputId": "0705f52c-b10c-4c24-d842-13e6f5596399"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted at /content/drive\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fJEKRRh0_BWG",
+   "metadata": {
+    "id": "fJEKRRh0_BWG"
+   },
+   "outputs": [],
+   "source": [
+    "data_loader_train,data_loader_test=load_data(r\"/content/drive/MyDrive/Project/datasets/Dataset3\",32,64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "db79d29c",
-   "metadata": {},
+   "metadata": {
+    "id": "db79d29c",
+    "outputId": "0b85155b-c993-4df3-8883-a9f99857025a"
+   },
    "outputs": [
     {
      "data": {
@@ -100,7 +149,7 @@
        "(380, 512)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,9 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "16170f93",
-   "metadata": {},
+   "metadata": {
+    "id": "16170f93"
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -161,10 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "f2b7e6f6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "id": "f2b7e6f6"
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AlexNet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptim\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01moptim\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m net \u001b[38;5;241m=\u001b[39m \u001b[43mAlexNet\u001b[49m(\u001b[38;5;241m22\u001b[39m)\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m criterion \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m      5\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mSGD(net\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, momentum\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.9\u001b[39m, weight_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0001\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AlexNet' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "net = AlexNet(22).to('cuda')\n",
@@ -176,9 +241,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "8efa56f0",
-   "metadata": {},
+   "metadata": {
+    "id": "8efa56f0",
+    "outputId": "45eac94d-0608-47c1-f6cd-455d75e5f2c1"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -382,9 +450,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "c8e27b23",
-   "metadata": {},
+   "execution_count": null,
+   "id": "ed2f139e",
+   "metadata": {
+    "id": "ed2f139e",
+    "outputId": "162e2b80-ac1c-4c17-adcd-a0f81572fb55"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,34 +485,247 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "b342bb1b",
+   "cell_type": "markdown",
+   "id": "27f3d4ba",
    "metadata": {},
+   "source": [
+    "## Training the dataset with AlexNet fetching directly from Pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "h0JOU0Jq-zfs",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "h0JOU0Jq-zfs",
+    "outputId": "1f2be461-b6a6-48f7-db9a-1b35b317d3f2"
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'acc_array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [65], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m####### plot the the training accuracies here #########\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m steps \u001b[38;5;241m=\u001b[39m [i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43macc_array\u001b[49m))]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# pyplot.title('Classification Accuracy')\u001b[39;00m\n\u001b[0;32m      4\u001b[0m pyplot\u001b[38;5;241m.\u001b[39mplot(steps,acc_array)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'acc_array' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in C:\\Users\\Admin/.cache\\torch\\hub\\pytorch_vision_v0.10.0\n",
+      "C:\\Users\\Admin\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Admin\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
    "source": [
-    "####### plot the the training accuracies here #########\n",
-    "steps = [i for i in range(len(acc_array))]\n",
-    "# pyplot.title('Classification Accuracy')\n",
-    "pyplot.plot(steps,acc_array)\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "import torch.optim as optim\n",
+    "\n",
+    "import torch\n",
+    "model = torch.hub.load('pytorch/vision:v0.10.0', 'alexnet', pretrained=False).to('cuda')\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9, weight_decay=0.0001)\n",
+    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, factor = 0.1, patience=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "AIJmL8Ps_Wg0",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "AIJmL8Ps_Wg0",
+    "outputId": "264a6a0d-0abd-4265-d9f0-e450b95f7d69"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cuda:0\n",
+      "Epoch [1/5], Step [10/59], Loss: 0.7234, Accuracy: 56.25%\n",
+      "Epoch [1/5], Step [20/59], Loss: 0.6576, Accuracy: 65.62%\n",
+      "Epoch [1/5], Step [30/59], Loss: 0.5519, Accuracy: 78.12%\n",
+      "Epoch [1/5], Step [40/59], Loss: 0.5413, Accuracy: 81.25%\n",
+      "Epoch [1/5], Step [50/59], Loss: 0.4948, Accuracy: 81.25%\n",
+      "Epoch [2/5], Step [10/59], Loss: 0.5302, Accuracy: 84.38%\n",
+      "Epoch [2/5], Step [20/59], Loss: 0.6495, Accuracy: 65.62%\n",
+      "Epoch [2/5], Step [30/59], Loss: 0.6460, Accuracy: 65.62%\n",
+      "Epoch [2/5], Step [40/59], Loss: 0.5276, Accuracy: 78.12%\n",
+      "Epoch [2/5], Step [50/59], Loss: 0.6355, Accuracy: 68.75%\n",
+      "Epoch [3/5], Step [10/59], Loss: 0.6450, Accuracy: 71.88%\n",
+      "Epoch [3/5], Step [20/59], Loss: 0.5975, Accuracy: 71.88%\n",
+      "Epoch [3/5], Step [30/59], Loss: 0.7153, Accuracy: 62.50%\n",
+      "Epoch [3/5], Step [40/59], Loss: 0.5646, Accuracy: 75.00%\n",
+      "Epoch [3/5], Step [50/59], Loss: 0.5960, Accuracy: 71.88%\n",
+      "Epoch [4/5], Step [10/59], Loss: 0.6639, Accuracy: 65.62%\n",
+      "Epoch [4/5], Step [20/59], Loss: 0.6883, Accuracy: 62.50%\n",
+      "Epoch [4/5], Step [30/59], Loss: 0.7250, Accuracy: 62.50%\n",
+      "Epoch [4/5], Step [40/59], Loss: 0.5780, Accuracy: 81.25%\n",
+      "Epoch [4/5], Step [50/59], Loss: 0.5640, Accuracy: 75.00%\n",
+      "Epoch [5/5], Step [10/59], Loss: 0.5643, Accuracy: 75.00%\n",
+      "Epoch [5/5], Step [20/59], Loss: 0.6004, Accuracy: 71.88%\n",
+      "Epoch [5/5], Step [30/59], Loss: 0.7062, Accuracy: 59.38%\n",
+      "Epoch [5/5], Step [40/59], Loss: 0.5210, Accuracy: 81.25%\n",
+      "Epoch [5/5], Step [50/59], Loss: 0.7227, Accuracy: 56.25%\n",
+      "######## Training Finished in 61.79754567146301 seconds ###########\n"
+     ]
+    }
+   ],
+   "source": [
+    "###### Define and run your training loop here #########\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Device: {}\".format(device))\n",
+    "model.to(device)\n",
+    "\n",
+    "num_epochs = 5\n",
+    "total_steps = len(data_loader_train)\n",
+    "t1 = time.time()\n",
+    "for epoch in range(num_epochs):\n",
+    "    for i, data in enumerate(data_loader_train):\n",
+    "        images, labels = data[0].to(device), data[1].to(device)\n",
+    "        # Forward pass\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "#         print(\"kjnfjnrnkrn\",i)\\\\\n",
+    "        # Backprop and optimisation\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "#         print(\"second time\",i)\n",
+    "        # Train accuracy\n",
+    "        total = labels.size(0)\n",
+    "        _,predicted = torch.max(outputs.data, 1)\n",
+    "        correct = (predicted == labels).sum().item()\n",
+    "        if (i + 1) % 10 == 0:\n",
+    "            print('Epoch [{}/{}], Step [{}/{}], Loss: {:.4f}, Accuracy: {:.2f}%'\n",
+    "                .format(epoch + 1, num_epochs, i + 1, total_steps, loss.item(),\n",
+    "                    (correct / total) * 100))\n",
+    "            \n",
+    "print(\"######## Training Finished in {} seconds ###########\".format(time.time()-t1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "WV4bZ-1yE_bA",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "WV4bZ-1yE_bA",
+    "outputId": "593d9217-613f-40e1-8c32-7fd9958a009f"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy of the model on the 621 test images: 69.24315619967794 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval() \n",
+    "perds = []\n",
+    "target = []\n",
+    "with torch.no_grad(): \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for data in data_loader_test:\n",
+    "        images, labels = data[0].to(device), data[1].to(device)\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        perds.extend(predicted)\n",
+    "        target.extend(labels)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "    print('Test Accuracy of the model on the {} test images: {} %'\n",
+    "        .format(total, (correct / total) * 100))\n",
+    "    \n",
+    "# plt.plot(Accuracies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1abc4f39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torchmetrics in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (0.10.2)\n",
+      "Requirement already satisfied: packaging in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (from torchmetrics) (21.3)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (from torchmetrics) (4.3.0)\n",
+      "Requirement already satisfied: torch>=1.3.1 in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (from torchmetrics) (1.13.0)\n",
+      "Requirement already satisfied: numpy>=1.17.2 in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (from torchmetrics) (1.23.3)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\admin\\anaconda3\\envs\\pytorch\\lib\\site-packages (from packaging->torchmetrics) (3.0.9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torchmetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9a2be5e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.6924, device='cuda:0')\n",
+      "(tensor(0.3462, device='cuda:0'), tensor(0.5000, device='cuda:0'))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  0, 191,   0,   0],\n",
+       "        [  0, 430,   0,   0],\n",
+       "        [  0,   0,   0,   0],\n",
+       "        [  0,   0,   0,   0]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchmetrics.functional import precision_recall\n",
+    "from torchmetrics import F1Score\n",
+    "from torchmetrics import ConfusionMatrix\n",
+    "perds1 = torch.stack(perds)\n",
+    "target1 = torch.stack(target)\n",
+    "f1 = F1Score(num_classes=4).to(device)\n",
+    "print(f1(perds1, target1))\n",
+    "print(precision_recall(perds1, target1, average='macro', num_classes=4))\n",
+    "confmat = ConfusionMatrix(num_classes=4).to(device)\n",
+    "confmat(perds1, target1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "359374be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "provenance": []
+  },
+  "gpuClass": "standard",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
